# DevSpace

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
docs/: APP-STORE-EDITION.md  BETA-TESTING.md
node_modules 2.42.34 PM/: .package-lock.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  archive.rs  bookmarks.rs  cleanup.rs  config.rs  docker.rs  history.rs  lib.rs  main.rs  scanner.rs
