[package]
name = "devspace"
version = "0.1.0"
description = "DevSpace Monitor — live RAM + disk readout in the macOS menu bar"
authors = ["sai pranav"]
edition = "2021"

[lib]
name = "devspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
walkdir = "2"
trash = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
globset = "0.4"
# Folder picker for the App Store edition's user-granted scan roots.
tauri-plugin-dialog = "2"
# Persist security-scoped bookmarks (base64 in a small json store).
base64 = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
# Audited to use only public AppKit APIs (setLevel/setStyleMask/
# setCollectionBehavior/object_setClass) — App Store-safe. Gives the popover its
# over-fullscreen behavior WITHOUT the macos-private-api feature (which is the
# real App Store blocker and stays off).
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
# Public AppKit calls to round the opaque window's corners (setOpaque/
# clearColor/CALayer cornerRadius) — App Store-safe.
objc2 = "0.6"
# Security-scoped bookmarks (NSURL/NSData) so folder grants survive the sandbox.
objc2-foundation = { version = "0.3", features = ["NSURL", "NSData", "NSString", "NSError", "NSArray"] }
